--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- HEADER -->
     <div class="head">
       <h1 class="title">Weekly Update: Suhani - Week of October 6th</h1>
-      <p class="subtitle">Snapshot of wins, progress, and risks at SS&C Technologies</p>
+      <p class="subtitle">Snapshot of wins, progress, and learning at my internship with SS&C Technologies</p>
       <div class="rule"></div>
     </div>
 
@@ -125,14 +125,16 @@
         <div class="iconBox">🚀</div>
         <div>
           <h3>Weekly Update</h3>
-          <p>Wrapped up all stories for previous sprint</p>
-          <p>Helped Wasam work on deployment and dev for MPD and Lyric UI</p>
+          <p>Wrapped up all stories for previous sprint: Keycloak migration + fixing codeql issues on ACL</p>
+          <p><strong>Deployment Support:</strong> Helped Wasam work on deployment and dev for MPD and Lyric UI</p>
           <p>Closed up PR for fixing codeql scan issues on ACL</p>
 
 	  <details>
             <summary>Additional Notes</summary>
             <ul>
-              <li>XXX</li>
+              <li>Learned deployment best practices for multi-environment setups</li>
+              <li>Enhanced understanding of static code analysis tools like codeql and sonar scans in github actions</li>
+
             </ul>
           </details>
         </div>
@@ -143,10 +145,12 @@
         <div>
           <h3>Understanding Design and Analysis of Lyric UI</h3>
           <ul>
-            <li>Solidified understanding of dev and deployment process</li>
-            <li>Understanding the release process of testing</li>
+            <li>Solidified understanding of dev and deployment pipeline</li>
+            <li>Gained insight into the release testing process and quality gates</li>
             <li>Learning about the enviornment files and how envrionment variables contribute to the keycloaks we use</li>
             <li>GIDS and BKS keycloak and understanding the security and authentification</li>
+            <li><strong>Security Patterns:</strong> Analyzed how identity management and access control are implemented across environments</li>
+
 
 
           </ul>
@@ -154,7 +158,8 @@
           <details>
             <summary>Additional Notes</summary>
             <ul>
-              <li>XXX</li>
+              <li>Reviewed internal documentation on Keycloak realm configurations</li>
+              <li>Shadowed deployment process to observe environment promotion</li>
             </ul>
           </details>
         </div>
@@ -167,6 +172,8 @@
           <ul>
             <li>Better understanding of Jira + Tempo thanks to Julia</li>
             <li>Understanding of realms, how to coordinate and match up information for corresponding keycloaks</li>
+            <li>Increased understanding of github actions, like the SS&C codebase for repos</li>
+            <li>Improved proficiency with the github PR and code commit process</li>
 
           </ul>
 
@@ -179,7 +186,7 @@
         </div>
       </div>
 
-    <!-- 2) IN PROGRESS -->
+    <!-- 2) IN PROGRESS
     <div class="section" id="progress">
       <h2 class="section-label"><span class="bar"></span> In Progress (Next Week’s Focus)</h2>
 
@@ -196,9 +203,9 @@
           <div class="progress"><div class="progress-bar" style="width:70%">70%</div></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- 3) BLOCKERS -->
+    <!-- 3) BLOCKERS
     <div class="section" id="blockers">
       <h2 class="section-label"><span class="bar"></span> Blockers / Risks</h2>
       <div class="card">
@@ -207,9 +214,9 @@
           <ul><li>None for now</li></ul>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- 4) ROLL-UP / ACHIEVEMENTS -->
+    <!-- 4) ROLL-UP / ACHIEVEMENTS
     <div class="section" id="rollup">
       <h2 class="section-label"><span class="bar"></span> Roll-Up (Cumulative Achievements)</h2>
       <div class="card">
@@ -233,7 +240,7 @@
           </details>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </body>
