--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
 
           </ul>
 
-          <details>
+          <!-- <details>
             <summary>Additional Notes</summary>
             <ul>
               <li>XXX</li>
             </ul>
-          </details>
+          </details> -->
         </div>
       </div>
 
