Updates for October 13th week

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- HEADER -->
     <div class="head">
-      <h1 class="title">Weekly Update: Suhani - Week of October 6th</h1>
+      <h1 class="title">Weekly Update: Suhani - Week of October 13th</h1>
       <p class="subtitle">Snapshot of wins, progress, and learning at my internship with SS&C Technologies</p>
       <div class="rule"></div>
     </div>
@@ -125,18 +125,19 @@
         <div class="iconBox">🚀</div>
         <div>
           <h3>Weekly Update</h3>
-          <p>Wrapped up all stories for previous sprint: Keycloak migration + fixing codeql issues on ACL</p>
-          <p><strong>Deployment Support:</strong> Helped Wasam work on deployment and dev for MPD and Lyric UI</p>
+          <p></p>Updating endpoints to refelct new bks hub changes from lyric 2</p>
+          <p>Learning more about endpoints and where the routing comes from by looking at routes.ts files and ID4</p>
           <p>Closed up PR for fixing codeql scan issues on ACL</p>
 
-	  <details>
+	  <!-- <details>
             <summary>Additional Notes</summary>
             <ul>
+              <li>Learning more about endpoints and where the routing comes from by looking at routes.ts files and ID4</li>
               <li>Learned deployment best practices for multi-environment setups</li>
               <li>Enhanced understanding of static code analysis tools like codeql and sonar scans in github actions</li>
 
             </ul>
-          </details>
+          </details> -->
         </div>
       </div>
 
@@ -154,7 +155,7 @@
 
 
           </ul>
-
+          
           <details>
             <summary>Additional Notes</summary>
             <ul>
@@ -164,6 +165,26 @@
           </details>
         </div>
       </div>
+
+      <div class="card">
+        <div class="iconBox">🎯</div>
+        <div>
+          <h3>Learning Goals</h3>
+          <ul>
+            <li>Understand the more product development side of Lyric</li>
+            <li>Going into wireframing and understanding client base + use cases</li>
+            <li>Working with databases and Postman + PostgreSQL + Kafka</li>
+          </ul>
+
+          <!-- <details> 
+            <summary>Additional Notes</summary>
+            <ul>
+              <li>XXX</li>
+            </ul>
+          </details> -->
+        </div>
+      </div>
+
 
       <div class="card">
         <div class="iconBox">💛</div>
