rough draft of changes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- HEADER -->
     <div class="head">
-      <h1 class="title">Weekly Update: Suhani - Week of October 13th</h1>
+      <h1 class="title">Weekly Update: Suhani - Week of October 20th</h1>
       <p class="subtitle">Snapshot of wins, progress, and learning at my internship with SS&C Technologies</p>
       <div class="rule"></div>
     </div>
@@ -126,8 +126,8 @@
         <div>
           <h3>Weekly Update</h3>
           <p></p>Updating endpoints to refelct new bks hub changes from lyric 2</p>
+          <p>Fixing zaproxy scan errors including domain misconfiguration, missing anti-clickjacking headers, content security policy and possible meta data exposure</p>
           <p>Learning more about endpoints and where the routing comes from by looking at routes.ts files and ID4</p>
-          <p>Closed up PR for fixing codeql scan issues on ACL</p>
 
 	  <!-- <details>
             <summary>Additional Notes</summary>
@@ -147,6 +147,8 @@
           <h3>Understanding Design and Analysis of Lyric UI</h3>
           <ul>
             <li>Solidified understanding of dev and deployment pipeline</li>
+            <li>What ZAP scans represent: Testing web applications to find security issues and data exposure</li>
+            <li>Putting yourself in the position fo an intruder to scan for issues</li>
             <li>Gained insight into the release testing process and quality gates</li>
             <li>Learning about the enviornment files and how envrionment variables contribute to the keycloaks we use</li>
             <li>GIDS and BKS keycloak and understanding the security and authentification</li>
