Final copy of Updates for October 20th Week

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
               <li>Acts as reverse proxy handling SSL termination and load balancing</li>
               <li>Made configuration changes in .config files for routing rules</li>
               <li>Fixed load balancer errors by adjusting configuration order and context</li>
+              <linked> <a href="https://docs.google.com/document/d/1Ya4mrLwtSUnkADR-Lrh3d1KoeB7mBlU_0u9AWD-rGro/edit?usp=sharing">Nginx Notes I took can be accessed here</a></linked>
             </ul>
           </details>
 
@@ -185,7 +186,7 @@
             <summary>Technical Work Completed</summary>
             <ul>
               <li>Updated API endpoints for BKS hub integration</li>
-              <li>Worked on getting /us routing functioning properly</li>
+              <li>Worked on getting /bks_sandbox realm routing functioning properly</li>
               <li>Traced routing through routes.ts files and ID4 configurations</li>
               <li>Tested edge cases like trailing slashes and query parameters</li>
             </ul>
@@ -246,7 +247,7 @@
           </ul>
 
           <details>
-            <summary>Key Collaboration Learnings</summary>
+            <summary>Key Collaboration Learnings and Goals</summary>
             <ul>
               <li>Ask specific questions with context and error messages</li>
               <li>Search documentation and previous PRs before asking</li>
